# PromptCombiner

./: README.md  convert_icon.py  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1770771471406-221a98705c7e38.mjs
.github/workflows/: release.yml
src/: App.svelte  app.css  fileDropStore.ts  store.ts  tauri-api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: FileBox.svelte  Separator.svelte  Sidebar.svelte  TextBox.svelte  Workbench.svelte
